<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/statistics_select_game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/statistics_select_game_title"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/statistics_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_select_game_title" />

    <TextView
        android:id="@+id/statistics_show_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_spinner" />

    <TextView
        android:id="@+id/statistics_show_attack_front_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_attack_front_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_show_title" />

    <TextView
        android:id="@+id/statistics_show_attack_front_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_attack_front_mid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_show_attack_front_left" />

    <TextView
        android:id="@+id/statistics_show_attack_front_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_attack_front_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_show_attack_front_mid" />

    <TextView
        android:id="@+id/statistics_show_attack_back_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_attack_back_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_show_attack_front_right" />

    <TextView
        android:id="@+id/statistics_show_attack_back_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_attack_back_mid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_show_attack_back_left" />

    <TextView
        android:id="@+id/statistics_show_attack_back_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_attack_back_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_show_attack_back_mid" />

    <TextView
        android:id="@+id/statistics_show_defense_front_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_defense_front_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_show_attack_back_right" />

    <TextView
        android:id="@+id/statistics_show_defense_front_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_defense_front_mid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_show_defense_front_left" />

    <TextView
        android:id="@+id/statistics_show_defense_front_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_defense_front_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_show_defense_front_mid" />

    <TextView
        android:id="@+id/statistics_show_defense_back_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_defense_back_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_show_defense_front_right" />

    <TextView
        android:id="@+id/statistics_show_defense_back_mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_defense_back_mid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_show_defense_back_left" />

    <TextView
        android:id="@+id/statistics_show_defense_back_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_show_defense_back_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_show_defense_back_mid" />

    <Button
        android:id="@+id/statistics_delete_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics_delete_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>