<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
android:layout_height="wrap_content"
android:padding="10dp"
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/main_new_game_button"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/main_new_game_button" />

    <Button
        android:id="@+id/main_statistics_button"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/main_statistics_button" />

    <Button
        android:id="@+id/main_preferences_button"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/main_preferences_button" />
</LinearLayout>