<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/new_game_attack_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/new_game_attack_title"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/new_game_attack_front_left_button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/new_game_attack_front_left_button"
        app:layout_constraintEnd_toStartOf="@+id/new_game_attack_front_mid_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_game_attack_title" />

    <Button
        android:id="@+id/new_game_attack_front_mid_button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/new_game_attack_front_mid_button"
        app:layout_constraintEnd_toStartOf="@+id/new_game_attack_front_right_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/new_game_attack_front_left_button"
        app:layout_constraintTop_toBottomOf="@+id/new_game_attack_title" />

    <Button
        android:id="@+id/new_game_attack_front_right_button"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/new_game_attack_front_right_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/new_game_attack_front_mid_button"
        app:layout_constraintTop_toBottomOf="@+id/new_game_attack_title" />

    <TextView
        android:id="@+id/new_game_save_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/new_game_save_title"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/new_game_save_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/new_game_save_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/new_game_save_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/new_game_save_button"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/new_game_save_button"
        app:layout_constraintStart_toEndOf="@+id/new_game_save_text" />

    <Button
        android:id="@+id/new_game_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>